--- a/profil.html
+++ b/profil.html
@@ -26,7 +26,7 @@
             Selama 12 tahun sekolah, saya merasa cukup baik pada bidang akademik. 
             Saya mendapatkan peringkat 3 di SD, peringkat 6 di SMP, dan peringkat 1 di SMA. Pencapaian ini membuat saya bangga dan 
             bersyukur terhadap nikmat Tuhan yang diberikan kepada saya, selain itu membanggakan orang tua juga membuat saya bangga terhadap diri saya sendiri.
-            Saya juga bangga bahwa saya mampu menjadi seorang ketua OSIS semasa SMP dulu. Mengamban ugas menjadi ketua OSIS banyak memberikan 
+            Saya juga bangga bahwa saya mampu menjadi seorang ketua OSIS semasa SMP dulu. Mengemban tugas menjadi ketua OSIS banyak memberikan 
             saya pembelajaran, terutama mengenai softskill, saya lebih memahami apa itu tanggung jawab, kepemimpinan, dan kedisiplinan.
             Saya bangga bahwa selama ini saya selalu berusaha berperilaku baik kepada orang lain dan menaati hukum.
         </p>
